# please

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  please.conf.md  please.ini.md  please.md
benches/: common.rs
bintest/: WARNING.md  make_user.sh
bintest/test_1/: please.ini  test.sh
bintest/test_10_file_exists/: please.ini  test.sh
bintest/test_11_backslash/: please.ini  test.sh
bintest/test_11_exact/: please.ini  test.sh
bintest/test_11_exact_name_vs_name/: please.ini  test.sh
bintest/test_11_exact_permit_hostname/: please.ini  test.sh
bintest/test_11_exact_permit_hostname_as_any/: please.ini  test.sh
bintest/test_11_exact_permit_localhost/: please.ini  test.sh
bintest/test_11_exact_prevent_hostname/: please.ini  test.sh
bintest/test_11_exact_prevent_name/: please.ini  test.sh
bintest/test_11_exact_target/: please.ini  test.sh
bintest/test_11_exact_target_vs_target/: please.ini  test.sh
bintest/test_11_internal_backslash/: please.ini  test.sh
bintest/test_11_parameters/: please.ini  test.sh
bintest/test_12_edit_keep_defined/: please.ini  test.sh
bintest/test_12_edit_keep_rule/: please.ini  test.sh
bintest/test_12_edit_mode/: please.ini  test.sh
bintest/test_13_empty_config/: please.ini  test.sh
bintest/test_13_include/: please.ini  test.sh
bintest/test_13_includedir/: please.ini  test.sh
bintest/test_13_includedir_broken_config/: test.sh
bintest/test_14_include/: please.ini  test.sh
bintest/test_15_broken_regex/: please.ini  test.sh
bintest/test_15_config_read_error/: test.sh
bintest/test_15_different_fs/: please.ini  test.sh
bintest/test_15_dir_change/: please.ini  test.sh
bintest/test_15_edit_fail/: please.ini  test.sh
bintest/test_15_list_reason/: test.sh  (+1 more)
examples/: please.ini
man/: please.1  please.ini.5
src/: lib.rs  main.rs  util.rs
tests/: basic_ro.rs  defaults.rs  exact.rs  reason.rs  search_path.rs  target_group.rs  tests.rs
(+79 files in other folders)
