[package]
name = "pleaser"
version = "0.3.16"
authors = ["ed neville <ed@s5h.net>"]
edition = "2018"
description = "please, a polite regex-first sudo alternative"
license = "GPL-3.0-or-later"
homepage = "https://www.usenix.org.uk/content/please.html"
repository = "https://gitlab.com/edneville/please"
readme = "README.md"
categories = ["command-line-utilities"]
documentation = "https://www.usenix.org.uk/content/please.html"
keywords = ["please", "access", "elevation", "edit", "regex"]

[dependencies]
regex = "1.3.7"
chrono = "0.4.11"
getopts = "0.2.21"
nix = "0.16.1"
pam = "0.7.0"
users = "0.10.0"
rpassword = "5.0.0"
syslog= "4.0.1"
libc = "0.2.73"
