[package]
name = "pleaser"
version = "0.5.3"
authors = ["ed neville <ed@s5h.net>"]
edition = "2018"
description = "please, a polite regex-first sudo alternative"
license = "GPL-3.0-or-later"
homepage = "https://www.usenix.org.uk/content/please.html"
repository = "https://gitlab.com/edneville/please"
readme = "README.md"
categories = ["command-line-utilities"]
documentation = "https://www.usenix.org.uk/content/please.html"
keywords = ["please", "access", "elevation", "edit", "regex"]
exclude = ["/bintest"]

[dependencies]
regex = "1.7"
chrono = "0.4"
getopts = "0.2"
nix = ">= 0.25"
pam = "0.7"
users = ">= 0.10, < 0.12"
rpassword = "5.0"
syslog= ">= 6.0"
libc = "0.2"
rand = "0.8"

